# flyteTest

./: .claudeignore  .gitignore  AGENTS.md  AGENTS_draft.md  Agent_gemini.md  CHANGELOG.archive.md  CHANGELOG.md  CLAUDE.md  CRITIQUE_PROMPT.md  CRITIQUE_REPORT.md  DESIGN.md  DESIGN_draft.md  Dockerfile  Frefractor_plan.md  Genomic Studies Platform Summary.md  IMPLEMENTATION_PLAN.md  PLAN_onramp_test.md  PLAN_user_authoring.md  README.md  README_flyte_rnaseq.md  SCIENTIST_GUIDE.md  asset_recommendation.md  doc_critique.md  flyte_rnaseq_workflow.py  hpc_scientist_review_prompt.md  hpc_scientist_review_responses.md  make_mpc_nicer.md  mcp_implementation_plan.md  mcpnicer2.md  ml20_assessment_plan.md  ml20_plan.md  monitor_out.json  nextflow_rnaseq.nf  plan-dagSlurmOrchestrationHandoff.prompt.md  plan-m20aHpcFailureRecovery.prompt.md  pyproject.toml  realtimeplan.md  requirements-cluster.txt  requirements.txt  synchronous-twirling-panda-assessment.md  (+3 more)
.codex/: code-review.md  comments.md  documentation.md  registry.md  tasks.md  testing.md  tutorial_context.md  user_tasks.md  workflows.md
docs/: agat_milestone_plan.md  annotation_pipeline_nl_prompt.md  annotation_pipeline_run_prompt.md  braker3_evm_notes.md  busco_submission_prompt.md  capability_maturity.md  checklist_guide.md  gatk_milestone_a_submission_prompt.md  gatk_milestone_c_submission_prompt.md  gatk_milestone_g_submission_prompt.md  gatk_milestone_h_submission_prompt.md  gatk_milestone_i_submission_prompt.md  gatk_pipeline_overview.md  mcp_client_config.example.json  mcp_cluster_prompt_tests.md  mcp_showcase.md  (+35 more)
(+521 files in other folders)
