[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flytetest"
version = "0.1.0"
description = "Prompt-driven Flyte v2 workflows for reproducible bioinformatics pipelines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anyio>=4,<5",
  "flyte>=2,<3",
  "mcp[cli]>=1,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

